--- a/docs/output.css
+++ b/docs/output.css
@@ -13,12 +13,14 @@
     --color-gray-50: oklch(0.985 0.002 247.839);
     --color-gray-100: oklch(0.967 0.003 264.542);
     --color-gray-200: oklch(0.928 0.006 264.531);
+    --color-gray-300: oklch(0.872 0.01 258.338);
     --color-gray-400: oklch(0.707 0.022 261.325);
     --color-gray-500: oklch(0.551 0.027 264.364);
     --color-gray-600: oklch(0.446 0.03 256.802);
     --color-gray-700: oklch(0.373 0.034 259.733);
     --color-gray-800: oklch(0.278 0.033 256.848);
     --color-gray-900: oklch(0.21 0.034 264.665);
+    --color-black: #000;
     --color-white: #fff;
     --spacing: 0.25rem;
     --breakpoint-md: 48rem;
@@ -52,6 +54,8 @@
     --radius-lg: 0.5rem;
     --default-font-family: var(--font-sans);
     --default-mono-font-family: var(--font-mono);
+    --color-primary-300: #93c5fd;
+    --color-primary-700: #1d4ed8;
   }
 }
 @layer base {
@@ -214,6 +218,9 @@
   .fixed {
     position: fixed;
   }
+  .m-6 {
+    margin: calc(var(--spacing) * 6);
+  }
   .mx-auto {
     margin-inline: auto;
   }
@@ -231,6 +238,9 @@
   }
   .mt-6 {
     margin-top: calc(var(--spacing) * 6);
+  }
+  .mt-20 {
+    margin-top: calc(var(--spacing) * 20);
   }
   .mr-3 {
     margin-right: calc(var(--spacing) * 3);
@@ -431,6 +441,15 @@
   .px-4 {
     padding-inline: calc(var(--spacing) * 4);
   }
+  .px-10 {
+    padding-inline: calc(var(--spacing) * 10);
+  }
+  .px-20 {
+    padding-inline: calc(var(--spacing) * 20);
+  }
+  .px-30 {
+    padding-inline: calc(var(--spacing) * 30);
+  }
   .py-2 {
     padding-block: calc(var(--spacing) * 2);
   }
@@ -547,6 +566,9 @@
   }
   .text-gray-900 {
     color: var(--color-gray-900);
+  }
+  .text-primary-700 {
+    color: var(--color-primary-700);
   }
   .text-purple-500 {
     color: var(--color-purple-500);
@@ -686,6 +708,11 @@
   .lg\:mt-0 {
     @media (width >= 64rem) {
       margin-top: calc(var(--spacing) * 0);
+    }
+  }
+  .lg\:mt-24 {
+    @media (width >= 64rem) {
+      margin-top: calc(var(--spacing) * 24);
     }
   }
   .lg\:mb-0 {
@@ -885,6 +912,26 @@
       background-color: var(--color-gray-900);
     }
   }
+  .dark\:text-gray-50 {
+    @media (prefers-color-scheme: dark) {
+      color: var(--color-gray-50);
+    }
+  }
+  .dark\:text-gray-100 {
+    @media (prefers-color-scheme: dark) {
+      color: var(--color-gray-100);
+    }
+  }
+  .dark\:text-gray-200 {
+    @media (prefers-color-scheme: dark) {
+      color: var(--color-gray-200);
+    }
+  }
+  .dark\:text-gray-300 {
+    @media (prefers-color-scheme: dark) {
+      color: var(--color-gray-300);
+    }
+  }
   .dark\:text-gray-400 {
     @media (prefers-color-scheme: dark) {
       color: var(--color-gray-400);
@@ -893,6 +940,11 @@
   .dark\:text-gray-600 {
     @media (prefers-color-scheme: dark) {
       color: var(--color-gray-600);
+    }
+  }
+  .dark\:text-primary-300 {
+    @media (prefers-color-scheme: dark) {
+      color: var(--color-primary-300);
     }
   }
   .dark\:text-purple-400 {
@@ -908,6 +960,21 @@
   .dark\:text-white {
     @media (prefers-color-scheme: dark) {
       color: var(--color-white);
+    }
+  }
+  .dark\:shadow-black {
+    @media (prefers-color-scheme: dark) {
+      --tw-shadow-color: var(--color-black);
+    }
+  }
+  .dark\:shadow-gray-400 {
+    @media (prefers-color-scheme: dark) {
+      --tw-shadow-color: var(--color-gray-400);
+    }
+  }
+  .dark\:shadow-gray-900 {
+    @media (prefers-color-scheme: dark) {
+      --tw-shadow-color: var(--color-gray-900);
     }
   }
   .dark\:hover\:bg-gray-700 {
