--- a/docs/output.css
+++ b/docs/output.css
@@ -8,9 +8,12 @@
       "Courier New", monospace;
     --color-amber-400: oklch(0.828 0.189 84.429);
     --color-blue-200: oklch(0.882 0.059 254.128);
+    --color-purple-50: oklch(0.977 0.014 308.299);
+    --color-purple-200: oklch(0.902 0.063 306.703);
     --color-purple-400: oklch(0.714 0.203 305.504);
     --color-purple-500: oklch(0.627 0.265 303.9);
     --color-purple-700: oklch(0.496 0.265 301.924);
+    --color-purple-800: oklch(0.438 0.218 303.724);
     --color-purple-900: oklch(0.381 0.176 304.987);
     --color-gray-50: oklch(0.985 0.002 247.839);
     --color-gray-100: oklch(0.967 0.003 264.542);
@@ -254,6 +257,9 @@
   .my-7 {
     margin-block: calc(var(--spacing) * 7);
   }
+  .mt-2 {
+    margin-top: calc(var(--spacing) * 2);
+  }
   .mt-4 {
     margin-top: calc(var(--spacing) * 4);
   }
@@ -265,6 +271,9 @@
   }
   .mr-auto {
     margin-right: auto;
+  }
+  .mb-1 {
+    margin-bottom: calc(var(--spacing) * 1);
   }
   .mb-2 {
     margin-bottom: calc(var(--spacing) * 2);
@@ -344,6 +353,15 @@
   .rotate-180 {
     rotate: 180deg;
   }
+  .list-inside {
+    list-style-position: inside;
+  }
+  .list-decimal {
+    list-style-type: decimal;
+  }
+  .list-disc {
+    list-style-type: disc;
+  }
   .flex-col {
     flex-direction: column;
   }
@@ -398,6 +416,10 @@
   .rounded-lg {
     border-radius: var(--radius-lg);
   }
+  .border {
+    border-style: var(--tw-border-style);
+    border-width: 1px;
+  }
   .border-t {
     border-top-style: var(--tw-border-style);
     border-top-width: 1px;
@@ -415,6 +437,9 @@
   .border-gray-300 {
     border-color: var(--color-gray-300);
   }
+  .border-purple-200 {
+    border-color: var(--color-purple-200);
+  }
   .bg-amber-400 {
     background-color: var(--color-amber-400);
   }
@@ -426,6 +451,9 @@
   }
   .bg-gray-200 {
     background-color: var(--color-gray-200);
+  }
+  .bg-purple-50 {
+    background-color: var(--color-purple-50);
   }
   .bg-purple-700 {
     background-color: var(--color-purple-700);
@@ -455,6 +483,9 @@
   }
   .p-2 {
     padding: calc(var(--spacing) * 2);
+  }
+  .p-3 {
+    padding: calc(var(--spacing) * 3);
   }
   .p-4 {
     padding: calc(var(--spacing) * 4);
@@ -594,6 +625,9 @@
   }
   .text-purple-700 {
     color: var(--color-purple-700);
+  }
+  .text-purple-800 {
+    color: var(--color-purple-800);
   }
   .text-white {
     color: var(--color-white);
